; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_task_switch.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_task_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@thread_support = common dso_local global i64 0, align 8
@current_task = common dso_local global i64 0, align 8
@current_task_id = common dso_local global i64 0, align 8
@stop_pc = common dso_local global i32 0, align 4
@fpregset_saved = common dso_local global i32 0, align 4
@gregset_saved = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @task_switch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @task_switch(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %6, align 4
  %8 = load i64, i64* @thread_support, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %27

10:                                               ; preds = %2
  %11 = call i32 (...) @flush_cached_frames()
  %12 = load i64, i64* @current_task, align 8
  %13 = load i64, i64* @current_task_id, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 (...) @THREAD_FETCH_REGISTERS()
  store i32 %16, i32* %6, align 4
  br label %18

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17, %15
  %19 = load i32, i32* %6, align 4
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %18
  %22 = call i32 (...) @read_pc()
  store i32 %22, i32* @stop_pc, align 4
  br label %23

23:                                               ; preds = %21, %18
  %24 = call i32 (...) @get_current_frame()
  %25 = call i32 @select_frame(i32 %24)
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %28

27:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %23
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @flush_cached_frames(...) #1

declare dso_local i32 @THREAD_FETCH_REGISTERS(...) #1

declare dso_local i32 @read_pc(...) #1

declare dso_local i32 @select_frame(i32) #1

declare dso_local i32 @get_current_frame(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
